[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "datacache"
requires-python = ">=3.9"
authors = [{name="Alex Rubinsteyn", email="alex.rubinsteyn@unc.edu"}]
description = "Helpers for transparently downloading datasets"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
readme = "README.md"
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
version = {attr = "datacache.version.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = ["datacache"]

[project.urls]
"Homepage" = "https://github.com/openvax/datacache"
"Bug Tracker" = "https://github.com/openvax/datacache/issues"
